fix animation and whitespaces

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -150,9 +150,9 @@ nav
 .whitespace
 	position: fixed
 	width: 100%
-	height: 300px
-	bottom: -300px
-	background-color: #fff
+	height: 50%
+	bottom: -50%
+	background-color: #f2f2f2
 
 .about_me
 	padding: 15px 30px 
@@ -343,7 +343,7 @@ nav
 	margin-top: 12px
 
 /* Animations */
-.about-section 
+.about-section, .profile-wrapper
 	opacity: 0
 	transform: translateY(10px)
 	animation: fadeInUp 0.5s forwards
@@ -353,17 +353,20 @@ nav
 		opacity: 1
 		transform: translateY(0)
 
-.about-section:nth-child(3)
-	animation-delay: 0.4s 
+.profile-wrapper
+	animation-delay: 0.3s
+.intro
+	animation-delay: 0.4s !important
 .about-section:nth-child(1)
-	animation-delay: 0.4s 
-.about-section:nth-child(2)
 	animation-delay: 0.5s 
-
-.about-section:nth-child(4)
+.about-section:nth-child(3)
+	animation-delay: 0.6s 
+.about-section:nth-child(2)
 	animation-delay: 0.7s 
-.about-section:nth-child(5)
+.about-section:nth-child(4)
 	animation-delay: 0.8s 
+.about-section:nth-child(5)
+	animation-delay: 0.9s 
 
 /* Z-index fixes */
 .about_me .container .row .contacts_title,
